Change Background based on Media Queries

--- a/style.css
+++ b/style.css
@@ -180,4 +180,13 @@ ul li a:hover{
     text-align:center;
   }  
 
- 
+ @media (min-width:700px){
+    :root{
+        --bg-url: url(./assets/bg-desktop.jpg);
+        
+    }
+    .light {
+        --bg-url:url(./assetsqbg-desktop-light.jpg);
+
+    }
+ }
